--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,9 @@
       font-weight: normal;
       src: local('Kollektif Regular'), url('Kollektif.woff') format('woff');
   }
-
+:root{
+    font-family: 'Kollektif Regular';
+}
 *{
     box-sizing: border-box;
 }
@@ -520,7 +522,7 @@ width: 80%;
 
 #loginButton{
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     color: white;
     background-color: rgb(251, 188, 88);
     height: 35px;
@@ -1030,7 +1032,7 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-left:20%;
-    height: 600px;
+    height: 500px;
     margin-top: 10%;
     flex-direction: column;
 }
@@ -1062,7 +1064,7 @@ flex-direction: column;
 #buttonDeclarerPanier{
     color : white;
     background-color: rgb(251, 188, 88);
-    border-radius: 20px;
+    border-radius: 10px;
     width: 100%;
     height: 40px;
     border: none;
@@ -1077,4 +1079,28 @@ flex-direction: column;
 #textAreaDiv{
     display: flex;
     flex-direction: column;
+}
+#vosPanierRepasDiv{
+background-color: rgb(13, 129, 153);
+border-radius: 20px;
+width: 60%;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 500px;
+flex-direction: column;
+margin-top: 2%;
+margin-left: 20%;
+}
+#vosPanierRepasDiv h2{
+    color: white;
+}
+#buttonModifierPanier {
+    color: white;
+    background-color: rgb(251, 188, 88);
+    border-radius: 10px;
+    width: 50%;
+    height: 40px;
+    border: none;
+    margin-top: 5%;
 }
