--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -426,6 +426,26 @@ width: 100px;
     margin-left: 20%;
     margin-top: 0%;
 }
+#mdp:invalid{
+border: 2px dashed pink;
+}
+#mdp:invalid:focus {
+    background-color: pink;
+}
+#mdp:valid{
+    background-color: rgb(95, 245, 95);
+}
+#confirmMdp:invalid {
+    border: 2px dashed pink;
+}
+
+#confirmMdp:invalid:focus {
+    background-color: pink;
+}
+
+#confirmMdp:valid {
+    background-color: rgb(95, 245, 95);
+}
 #loginLogoSvgInscription {
     width: 400px;
     height: 400px;
