--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1192,6 +1192,7 @@ margin-left: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 5%;
     
 }
 #listePaniersDiv h1{
@@ -1218,4 +1219,36 @@ margin-left: 20%;
 #flexDivLivraison{
     display: flex;
     flex-direction: column;
+}
+#listeLivraisonsDiv{
+display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5%;
+}
+#listeLivraisonsDiv h2{
+    color: white;
+        font-family: 'Kollektif Regular';
+        margin-bottom: 10%;
+}
+#listeLivraisonsDiv span{
+    color: white;
+    font-family: 'Kollektif Regular';
+    align-items: left;
+    
+}
+#listeLivraisonsDiv span i{
+    color: rgb(251, 188, 88);
+        margin-left: 30%;
+        font-size: 150%;
+        border: white solid 3px;
+        border-radius: 10px;
+        border-color: rgb(251, 188, 88);
+        margin-right: 1%;
+        padding: 4px;
+}
+#flexDivVosLivraisons{
+    display: flex;
+        flex-direction: column;
+    
 }
