--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1252,3 +1252,31 @@ display: flex;
     flex-direction: column;
     
 }
+#idInexistant{
+    
+    position: absolute;
+    color: red;
+    margin-top: 35%;
+    margin-left: 35%;
+    font-style: bold;
+    font-family: 'Kollektif Regular';
+    font-size: 150%;
+}
+#mdpInexistant{
+    position: absolute;
+    color: red;
+    margin-top: 35%;
+    margin-left: 35%;
+    font-style: bold;
+    font-family: 'Kollektif Regular';
+    font-size: 150%;
+}
+#vousEtesConnecté{
+    position: absolute;
+    color: red;
+    margin-top: 35%;
+    margin-left: 35%;
+    font-style: bold;
+    font-family: 'Kollektif Regular';
+    font-size: 150%;
+}
