--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -23,19 +23,25 @@ header{
 }
 
 #logo{
-    width: 9%;
-    height: 9%;
-    margin-right: 4%;
+    width: 130px;
+    height: 130px;
+    margin-right:2%;
     
 }
+
 #logo2{
- 
-      width: 9%;
-      height: 9%;
-      margin-right: 1%;
-      margin-top: -1%;
-     
-    
+    width: 130px;
+    height: 130px;
+      margin-right: 2%;
+}
+#hreflogo1:hover{
+    border-bottom: none;
+}
+.logo2href{
+    width:10%;
+}
+#fblogo{
+    font-size: 50%;
 }
 nav{
     display: flex;
@@ -55,7 +61,7 @@ nav a {
     font-size: 120%;
 
 }
-#pages1 a:hover{
+#pages1 .ahover:hover{
     color: rgb(251, 188, 88);
 
     border-bottom: 2px solid rgb(251, 188, 88);
@@ -70,7 +76,7 @@ nav a {
 
 #sideheader{
     display: flex;
-    margin-left: 70%;
+    margin-left: 69%;
     margin-top: -9%;
 }
 #sideheader i{
@@ -136,16 +142,12 @@ nav a {
 
 }
 ol.carousel-indicators {
-    position: absolute;
     bottom: 5%;
     width: auto;
-    
-    
 }
 
 ol.carousel-indicators li,
 ol.carousel-indicators li.active {
-    float: left;
     width: 15px;
     height: 15px;
     margin: 0;
@@ -273,7 +275,7 @@ flex-direction: column;
     display: flex;
     flex-direction: column;
     font-size: 170%;
-    padding: 3%;
+    padding: 2%;
     
 }
 #actu h3{
@@ -395,12 +397,18 @@ width: 100px;
 }
 #footericon{
     display: flex;
-        flex-direction: column;
         margin-left: 75%;
+        font-size: 200%;
         margin-top: -5%;
-        font-size: 300%;
+       
 }
-
+#footericon a{
+    margin-right: 10%;
+}
+#footericon a i{
+    font-size: 200%;
+    color: black;
+}
 #adressePrefix{
     margin-right: 1%;
 }
@@ -1249,4 +1257,21 @@ display: flex;
     margin-left: 35%;
     font-style: bold;
     font-size: 150%;
+}
+#charte{
+    width: 50%;
+    margin-top: 10%;
+    margin-left: 25%;
+
+}
+.h1{
+    display: none;
+}
+#menuBurger{
+    font-size:300%;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    display: none;
+    color: rgb(255, 255, 255);
 }
