--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -15,8 +15,9 @@ justify-content: center;
 align-items: center;
 display: none;
 transition: all 0.5s ease;
-background-color: rgba(251, 251, 251, 0.388);
+background-color: rgba(251, 251, 251, 0.322);
 backdrop-filter: blur(7px);
+
 }
 #pagesAll{
 justify-content: center;
@@ -29,42 +30,324 @@ align-items: center;
     font-weight: bold;
     padding: 1%;
 }
-#pagesAll a:hover{
-    border: rgb(251, 188, 88) solid 2px;
-    border-radius: 10px;
-    
+.pagesAll2{
+    margin-left: 45%;
 }
-#logo{
+.logoMobile{
 position: absolute;
 top: 20px;
 left: 80px;
 width: 90px;
 height: 90px;
 }
-#menuBurger {
-    width: 35px;
+.menuBurger {
     position: absolute;
-    top: 35px;
-    right: 35px;
-    display: block;
+    display: flex;
+    font-size: 300%;
+    top: 30px;
+    right: 200px;
+    color: rgb(0, 0, 0);
 }
 .mobile-menu{
     display: inline-flex;
 }
-#nav2{
-visibility: hidden;
-}
 
-#sideheader{
+#sideheader, #sideheader2{
     visibility: hidden;
 }
 ol.carousel-indicators{
     display: none;
+    }
+    #backgroundInscription{
+    width: 60%;
+        background-color: rgb(13, 129, 153);
+        border-radius: 30px;
+        margin-left: 20%;
+        height:100vh;
+        display: flex;
+        margin-top: 10%;
+    }
+    #loginLogoSvgInscription {
+        width: 250px;
+        height: 250px;
+        margin-top: 5%;
+    }
+    #connexionContainer {
+        background-color: rgb(13, 129, 153);
+        width: 60%;
+        border-radius: 30px;
+        height: 100vh;
+        margin-left: 20%;
+        display: flex;
+        margin-top: 10%;
+        justify-content: left;
+        align-items: left;
+        flex-wrap: nowrap;
+        padding-top: 5%;
+        padding-left: 20%;
+    }
+    #mainLivraison {
+        background-color: rgb(13, 129, 153);
+        margin-left: 25%;
+        width: 50%;
+        border-radius: 10px;
+        height: 500px;
+        height: 100vh;
+
+
+    }
+    #mainContact {
+        width: 50%;
+        background-color: rgb(13, 129, 153);
+        margin-left: 30%;
+        margin-top: 10%;
+        border-radius: 20px;
+        color: white;
+        height: 85vh;
+    }
+    .carousel-control-prev-icon, .carousel-control-next-icon {
+        visibility: hidden;
+    }
+        .seConnecterMobile {
+            visibility: visible;
+            display: block;
+        }
+#backgroundColorActuDiv {
+background-color: rgb(13, 129, 153);
+width: 80%;
+border-radius: 20px;
+padding-top: 1%;
+margin-left: 13%;
+}
+#divsection {
+display: flex;
+justify-content: space-around;
+margin-top: -12%;
 }
 }
 
 @media only screen and (max-width:700px){
 
+    .menuBurger {
+            position: absolute;
+            display: flex;
+            font-size: 300%;
+            top: 30px;
+            right: 100px;
+            color: rgb(0, 0, 0);
+        }
+    #divsection {
+            display: flex;
+            justify-content: space-around;
+            margin-top: -10%;
+        }
+    #divinfo h1 {
+        height: 30vh;
+        background-color: rgb(13, 129, 153);
+        width: 100%;
+        display: flex;
+        font-size: 150%;
+        margin-right: 15%;
+
+    }
+#divsection section div i {
+    font-size: 200%;
+    color: rgb(13, 129, 153);
+    margin-top: 3%;
+
+}
+#divsection section div h3 {
+    color: rgb(13, 129, 153);
+    font-size: 100%;
+    font-weight: bold;
+
+}
+#divsection section div p {
+    color: white;
+    display: flex;
+    margin-left: 10%;
+    font-size: 80%;
+}
+#photochien {
+    height: 250px;
+    width: 400px;
+    border-radius: 15px;
+    visibility: hidden;
+
+}
+#actu {
+    height: 400px;
+    width: 100%;
+    border-radius: 15px;
+    background-color: rgb(251, 188, 88);
+    display: flex;
+    flex-direction: column;
+    font-size: 170%;
+    padding: 2%;
+    margin-left: -20%;
+
+}
+#actu button {
+    font-size: 60%;
+    border-radius: 6px;
+    background-color: rgb(13, 129, 153);
+    border: none;
+    width: 33%;
+    padding: 2%;
+    color: white;
+    margin-left: 33%;
+    height: 20px;
+}
+#photodiv {
+    visibility: hidden;
+}
+#divcompteur {
+    height: 300px;
+    width: 90%;
+    background-color: rgb(13, 129, 153);
+    border-radius: 12px;
+    margin-left: 4%;
+    display: flex;
+    justify-content: space-around;
+    margin-top: -45%;
+}
+#instalogo, #fblogo{
+    font-size: 50%;
+}
+#cgu {
+    display: flex;
+    flex-direction: column;
+    margin-left: 45%;
+    margin-top: -10%;
+}
+#footericon a i{
+    font-size: 100%;
+}
+#premierArticleActualités{
+    margin-top: 15%;
+    
+
+}
+#facebookApiFeedDiv {
+    background-color: rgb(251, 188, 88);
+    width: 400px;
+    height: 300px;
+    border-radius: 5%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 2% 2% 0% 2%;
+    margin-left: -5%;
+}
+.enSavoirPlusActu{
+    visibility: hidden;
+}
+.inscriptionContainer {
+    display: flex;
+    margin-left: 20%;
+    margin-top: 2%;
+    height: 500px;
+
+}
+#backgroundInscription {
+    width: 80%;
+    background-color: rgb(13, 129, 153);
+    border-radius: 30px;
+    margin-left: 10%;
+    height: 500px;
+    display: flex;
+    margin-top: 20%;
+}
+#loginLogoSvgInscription{
+    visibility: hidden;
+
+}#leCollectifArticle {
+    margin-top: 30%;
+    color: rgb(119, 119, 119);
+    width: 45%;
+}
+#SecondArticleImg {
+    width: 250px;
+    height: 250px;
+    border-radius: 2%;
+    margin-top: 80%;
+}
+#jeMinscrisLeCollectifButton{
+    display: none;
+}
+.TableauImgsFormat {
+    height: 100px;
+    width: 150px;
+    margin: 2% 2% 0% 2%;
+}
+#chartePourEux {
+    display: none;
+}
+#articlesChartePEux {
+    width: 255%;
+    margin: 0% 0% 0% 0%;
+    font-style: normal;
+    font-weight: normal;
+    background-color: white;
+    border-radius: 5%;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    padding: 2%;
+    color: rgb(119, 119, 119);
+    margin-left: -22%;
+    border-radius: 5px;
+}
+#fondCouleurArticle {
+    background-color: rgb(251, 188, 88);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height:350px;
+    width: 90%;
+    margin-left: 5%;
+    border-radius: 5px;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+#deuxiemeImgActu{
+    display: none;
+}
+#articleDeuxActuDiv{
+    margin-left: -20%;
+}
+#mainLivraison {
+    background-color: rgb(13, 129, 153);
+    margin-left: 20%;
+    width: 60%;
+    border-radius: 10px;
+    height: 500px;
+    margin-top: 20%;
+
+
+}
+#listePaniersDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5%;
+   padding: 1%;
+
+}
+#mainContact {
+    display: flex;
+    flex-direction: column;
+    height: 350px;
+    margin-top: 20%;
+
+}
+#formContact{
+    width: 200%;
+    margin-left: -5%;
+}
 }
 @media only screen and (max-width:480px){
 
