--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,9 +37,7 @@ header{
 #hreflogo1:hover{
     border-bottom: none;
 }
-.logo2href{
-    width:10%;
-}
+
 #fblogo{
     font-size: 50%;
 }
@@ -63,10 +61,7 @@ nav a {
 
 }
 #pages1 .ahover:hover{
-    color: rgb(251, 188, 88);
-
-    border-bottom: 2px solid rgb(251, 188, 88);
-    width: 70%;
+    color: rgb(13, 129, 153);
     text-decoration: none;
     bottom: -2%;
     left: 50%;
@@ -115,6 +110,9 @@ margin-left: -5%;
 #nav2 a{
     color: white;
     text-decoration: none;
+}
+#nav1 a:hover {
+    color: rgb(13, 129, 153);
 }
 #nav2 a:hover{
     color: rgb(13, 129, 153);
