--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1108,6 +1108,10 @@ margin-left: 20%;
         border: none;
         margin-top: 0%;
 }
+#messageModify{
+    height: 60px;
+    width: 250px;
+}
 #repasSuppr{
     position: absolute;
     color: rgb(232, 65, 69);
