--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1096,17 +1096,25 @@ margin-left: 20%;
     color: white;
     background-color: rgb(251, 188, 88);
     width: 20%;
-    height: 40px;
+    height:59px;
     border: none;
     margin-top: 0%;
+}
+#buttonModifierPanier2{
+text-decoration: none;
+color: white;
 }
 #buttonSupprimerRepas{
     color: white;
         background-color: rgb(232, 65, 69);
         width: 20%;
-        height: 40px;
+        height: 59px;
         border: none;
         margin-top: 0%;
+}
+#buttonSupprimerRepas2{
+    text-decoration: none;
+    color: white;
 }
 #messageModify{
     height: 60px;
