--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -7,35 +7,35 @@ height: 30vh;
 margin-left: 0%;
 }
 #Connecté {
-    color: red;
-    font-weight: bold;
+color: red;
+font-weight: bold;
 }
 
 #seDeco {
-    color: rgb(20, 20, 20);
-    font-weight: bold;
+color: rgb(20, 20, 20);
+font-weight: bold;
 }
 
 #seDeco1 {
-    color: rgb(251, 188, 88);
-    font-weight: bold;
+color: rgb(251, 188, 88);
+font-weight: bold;
 }
 
 .coEtDecoDiv {
-    display: flex;
-    flex-direction: column;
-    top: 1%;
-    right: 1%;
-    position: absolute;
+display: flex;
+flex-direction: column;
+top: 1%;
+right: 1%;
+position: absolute;
 }
 
 .coEtDecoDiv2 {
 
-    display: flex;
-    flex-direction: column;
-    top: 19%;
-    right: 1%;
-    position: absolute;
+display: flex;
+flex-direction: column;
+top: 19%;
+right: 1%;
+position: absolute;
 }
 .pages{
 display: flex;
@@ -51,10 +51,10 @@ backdrop-filter: blur(7px);
 
 }
 #pages1{
-    margin-left: -15%;
+margin-left: -15%;
 }
 .pages1Only{
-    margin-left: -10%;
+margin-left: -10%;
 }
 #pagesAll{
 justify-content: center;
@@ -62,19 +62,19 @@ align-items: center;
 border-bottom: 0px solid black;
 }
 #logo{
-    margin-left: 7%;
+margin-left: 7%;
 }
 #pagesAll a{
-    display: flex;
-    flex-direction: column;
-    color: rgb(251, 188, 88);
-    font-weight: bold;
-    padding: 1px;
+display: flex;
+flex-direction: column;
+color: rgb(251, 188, 88);
+font-weight: bold;
+padding: 1px;
 }
 .pagesAll2{
-    margin-left: 70%;
-    justify-content: center;
-    align-items: center;
+margin-left: 70%;
+justify-content: center;
+align-items: center;
 }
 .logoMobile{
 position: absolute;
@@ -84,73 +84,73 @@ width: 90px;
 height: 90px;
 }
 .menuBurger {
-    position: absolute;
-    display: flex;
-    font-size: 300%;
-    top: 30px;
-    right: 200px;
-    color: rgb(13, 129, 153);
+position: absolute;
+display: flex;
+font-size: 300%;
+top: 30px;
+right: 200px;
+color: rgb(13, 129, 153);
 }
 .mobile-menu{
-    display: flex;
-    flex-direction: column;
+display: flex;
+flex-direction: column;
 }
 
 ol.carousel-indicators{
-    display: none;
-    }
-    #backgroundInscription{
-    width: 60%;
-        background-color: rgb(13, 129, 153);
-        border-radius: 30px;
-        margin-left: 20%;
-        height:100vh;
-        display: flex;
-        margin-top: 10%;
-    }
-    #loginLogoSvgInscription {
-        display: none;
-    }
-    #connexionContainer {
-        background-color: rgb(13, 129, 153);
-        width: 60%;
-        border-radius: 30px;
-        height: 85vh;
-        margin-left: 20%;
-        display: flex;
-        margin-top: 20%;
-        justify-content: left;
-        align-items: left;
-        flex-wrap: nowrap;
-        padding-top: 5%;
-        padding-left: 20%;
-    }
-    #mainLivraison {
-        background-color: rgb(13, 129, 153);
-        margin-left: 25%;
-        width: 50%;
-        border-radius: 10px;
-        height: 500px;
-        height: 100vh;
+display: none;
+}
+#backgroundInscription{
+width: 60%;
+background-color: rgb(13, 129, 153);
+border-radius: 30px;
+margin-left: 20%;
+height:100vh;
+display: flex;
+margin-top: 10%;
+}
+#loginLogoSvgInscription {
+display: none;
+}
+#connexionContainer {
+background-color: rgb(13, 129, 153);
+width: 60%;
+border-radius: 30px;
+height: 85vh;
+margin-left: 20%;
+display: flex;
+margin-top: 20%;
+justify-content: left;
+align-items: left;
+flex-wrap: nowrap;
+padding-top: 5%;
+padding-left: 20%;
+}
+#mainLivraison {
+background-color: rgb(13, 129, 153);
+margin-left: 25%;
+width: 50%;
+border-radius: 10px;
+height: 500px;
+height: 100vh;
 
 
-    }
-    #mainContact {
-        width: 50%;
-        background-color: rgb(13, 129, 153);
-        margin-left: 30%;
-        margin-top: 10%;
-        border-radius: 20px;
-        color: white;
-        height: 85vh;
-    }
-    .carousel-control-prev-icon, .carousel-control-next-icon {
-        visibility: hidden;
-    }
-        .seConnecterMobile {
-            visibility: visible;
-            display: block;
-        }
+}
+#mainContact {
+width: 50%;
+background-color: rgb(13, 129, 153);
+margin-left: 30%;
+margin-top: 10%;
+border-radius: 20px;
+color: white;
+height: 85vh;
+}
+.carousel-control-prev-icon, .carousel-control-next-icon {
+visibility: hidden;
+}
+.seConnecterMobile {
+visibility: visible;
+display: block;
+}
 #backgroundColorActuDiv {
 background-color: rgb(13, 129, 153);
 width: 80%;
@@ -167,228 +167,580 @@ margin-top: -12%;
 
 @media only screen and (max-width:700px){
 
-    .menuBurger {
-            position: absolute;
-            display: flex;
-            font-size: 300%;
-            top: 30px;
-            right: 100px;
-            color: rgb(0, 0, 0);
-        }
-    #divsection {
-            display: flex;
-            justify-content: space-around;
-            margin-top: -10%;
-        }
-    #divinfo h1 {
-        height: 30vh;
-        background-color: rgb(13, 129, 153);
-        width: 100%;
-        display: flex;
-        font-size: 150%;
-        margin-right: 15%;
+.menuBurger {
+position: absolute;
+display: flex;
+font-size: 300%;
+top: 30px;
+right: 100px;
+color: rgb(0, 0, 0);
+}
+#divsection {
+display: flex;
+justify-content: space-around;
+margin-top: -10%;
+}
+#divinfo h1 {
+height: 30vh;
+background-color: rgb(13, 129, 153);
+width: 100%;
+display: flex;
+font-size: 150%;
+margin-right: 15%;
 
-    }
+}
 #divsection section div i {
-    font-size: 200%;
-    color: rgb(13, 129, 153);
-    margin-top: 3%;
+font-size: 200%;
+color: rgb(13, 129, 153);
+margin-top: 3%;
 
 }
 #divsection section div h3 {
-    color: rgb(13, 129, 153);
-    font-size: 100%;
-    font-weight: bold;
+color: rgb(13, 129, 153);
+font-size: 100%;
+font-weight: bold;
 
 }
 #divsection section div p {
-    color: white;
-    display: flex;
-    margin-left: 10%;
-    font-size: 80%;
+color: white;
+display: flex;
+margin-left: 10%;
+font-size: 80%;
 }
 #photochien {
-    height: 250px;
-    width: 400px;
-    border-radius: 15px;
-    visibility: hidden;
+height: 250px;
+width: 400px;
+border-radius: 15px;
+visibility: hidden;
 
 }
 #actu {
-    height: 400px;
-    width: 100%;
-    border-radius: 15px;
-    background-color: rgb(251, 188, 88);
-    display: flex;
-    flex-direction: column;
-    font-size: 170%;
-    padding: 2%;
-    margin-left: -20%;
+height: 400px;
+width: 100%;
+border-radius: 15px;
+background-color: rgb(251, 188, 88);
+display: flex;
+flex-direction: column;
+font-size: 170%;
+padding: 2%;
+margin-left: -20%;
 
 }
 #actu button {
-    font-size: 60%;
-    border-radius: 6px;
-    background-color: rgb(13, 129, 153);
-    border: none;
-    width: 33%;
-    padding: 2%;
-    color: white;
-    margin-left: 33%;
-    height: 20px;
+font-size: 60%;
+border-radius: 6px;
+background-color: rgb(13, 129, 153);
+border: none;
+width: 33%;
+padding: 2%;
+color: white;
+margin-left: 33%;
+height: 20px;
 }
 #photodiv {
-    visibility: hidden;
+visibility: hidden;
 }
 #divcompteur {
-    height: 300px;
-    width: 90%;
-    background-color: rgb(13, 129, 153);
-    border-radius: 12px;
-    margin-left: 4%;
-    display: flex;
-    justify-content: space-around;
-    margin-top: -45%;
+height: 300px;
+width: 90%;
+background-color: rgb(13, 129, 153);
+border-radius: 12px;
+margin-left: 4%;
+display: flex;
+justify-content: space-around;
+margin-top: -45%;
 }
 #instalogo, #fblogo{
-    font-size: 50%;
+font-size: 50%;
 }
 #cgu {
-    display: flex;
-    flex-direction: column;
-    margin-left: 45%;
-    margin-top: -10%;
+display: flex;
+flex-direction: column;
+margin-left: 45%;
+margin-top: -10%;
 }
 #footericon a i{
-    font-size: 100%;
+font-size: 100%;
 }
 #premierArticleActualités{
-    margin-top: 15%;
-    
+margin-top: 15%;
+
 
 }
 #facebookApiFeedDiv {
-    background-color: rgb(251, 188, 88);
-    width: 400px;
-    height: 300px;
-    border-radius: 5%;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    padding: 2% 2% 0% 2%;
-    margin-left: -5%;
+background-color: rgb(251, 188, 88);
+width: 400px;
+height: 300px;
+border-radius: 5%;
+color: white;
+display: flex;
+flex-direction: column;
+justify-content: left;
+padding: 2% 2% 0% 2%;
+margin-left: -5%;
 }
 .enSavoirPlusActu{
-    visibility: hidden;
+visibility: hidden;
 }
 .inscriptionContainer {
-    display: flex;
-    margin-left: 20%;
-    margin-top: 2%;
-    height: 500px;
+display: flex;
+margin-left: 20%;
+margin-top: 2%;
+height: 500px;
 
 }
 #backgroundInscription {
-    width: 80%;
-    background-color: rgb(13, 129, 153);
-    border-radius: 30px;
-    margin-left: 10%;
-    height: 500px;
-    display: flex;
-    margin-top: 20%;
+width: 80%;
+background-color: rgb(13, 129, 153);
+border-radius: 30px;
+margin-left: 10%;
+height: 500px;
+display: flex;
+margin-top: 20%;
 }
 #loginLogoSvgInscription{
-    visibility: hidden;
+visibility: hidden;
 
 }#leCollectifArticle {
-    margin-top: 30%;
-    color: rgb(119, 119, 119);
-    width: 45%;
+margin-top: 30%;
+color: rgb(119, 119, 119);
+width: 45%;
 }
 #SecondArticleImg {
-    width: 250px;
-    height: 250px;
-    border-radius: 2%;
-    margin-top: 80%;
+width: 250px;
+height: 250px;
+border-radius: 2%;
+margin-top: 80%;
 }
 #jeMinscrisLeCollectifButton{
-    display: none;
+display: none;
 }
 .TableauImgsFormat {
-    height: 100px;
-    width: 150px;
-    margin: 2% 2% 0% 2%;
+height: 100px;
+width: 150px;
+margin: 2% 2% 0% 2%;
 }
 #chartePourEux {
-    display: none;
+display: none;
 }
 #articlesChartePEux {
-    width: 255%;
-    margin: 0% 0% 0% 0%;
-    font-style: normal;
-    font-weight: normal;
-    background-color: white;
-    border-radius: 5%;
-    height: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: left;
-    padding: 2%;
-    color: rgb(119, 119, 119);
-    margin-left: -22%;
-    border-radius: 5px;
+width: 255%;
+margin: 0% 0% 0% 0%;
+font-style: normal;
+font-weight: normal;
+background-color: white;
+border-radius: 5%;
+height: 75%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: left;
+padding: 2%;
+color: rgb(119, 119, 119);
+margin-left: -22%;
+border-radius: 5px;
 }
 #fondCouleurArticle {
-    background-color: rgb(251, 188, 88);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height:350px;
-    width: 90%;
-    margin-left: 5%;
-    border-radius: 5px;
-    padding-left: 2%;
-    padding-right: 2%;
+background-color: rgb(251, 188, 88);
+display: flex;
+align-items: center;
+justify-content: center;
+height:350px;
+width: 90%;
+margin-left: 5%;
+border-radius: 5px;
+padding-left: 2%;
+padding-right: 2%;
 }
 #deuxiemeImgActu{
-    display: none;
+display: none;
 }
 #articleDeuxActuDiv{
-    margin-left: -20%;
+margin-left: -20%;
 }
 #mainLivraison {
-    background-color: rgb(13, 129, 153);
-    margin-left: 20%;
-    width: 60%;
-    border-radius: 10px;
-    height: 500px;
-    margin-top: 20%;
+background-color: rgb(13, 129, 153);
+margin-left: 20%;
+width: 60%;
+border-radius: 10px;
+height: 500px;
+margin-top: 20%;
 
 
 }
 #listePaniersDiv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 5%;
-   padding: 1%;
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-bottom: 5%;
+padding: 1%;
 
 }
 #mainContact {
-    display: flex;
-    flex-direction: column;
-    height: 350px;
-    margin-top: 20%;
+display: flex;
+flex-direction: column;
+height: 350px;
+margin-top: 20%;
 
 }
 #formContact{
-    width: 200%;
-    margin-left: -5%;
+width: 200%;
+margin-left: -5%;
 }
 }
 @media only screen and (max-width:480px){
+.coEtDecoDiv {
+display: flex;
+flex-direction: column;
+top: 1%;
+left: 1%;
+position: absolute;
+}
+#connexionContainer{
+width: 80%;
+margin-left: 10%;
+}
+#loginLogoSvg{
+display: none;
+}
+#formConnexionContainer{
+margin-left: 5%;
+}
+.coEtDecoDiv2 {
+
+display: flex;
+flex-direction: column;
+top: 1%;
+left: 1%;
+position: absolute;
+}
+.menuBurger {
+position: absolute;
+display: flex;
+font-size: 300%;
+top: 30px;
+right: 100px;
+color: rgb(0, 0, 0);
+}
+
+#divsection {
+display: flex;
+justify-content: space-around;
+margin-top: -10%;
+}
+
+#divinfo h1 {
+height: 30vh;
+background-color: rgb(13, 129, 153);
+width: 100%;
+display: flex;
+font-size: 120%;
+margin-right: 15%;
+
+}
+
+#divsection section div i {
+font-size: 130%;
+color: rgb(13, 129, 153);
+margin-top: 20%;
+
+}
 
 
+#divsection section div h3 {
+color: rgb(13, 129, 153);
+font-size: 80%;
+font-weight: bold;
+margin-left: 6%;
+
+}
+
+#divsection section div p {
+color: white;
+display: flex;
+margin-left: 10%;
+font-size: 70%;
+}
+
+#photochien {
+height: 250px;
+width: 400px;
+border-radius: 15px;
+visibility: hidden;
+
+}
+
+#actu {
+height: 400px;
+width: 100%;
+border-radius: 15px;
+background-color: rgb(251, 188, 88);
+display: flex;
+flex-direction: column;
+font-size: 170%;
+padding: 2%;
+margin-left: -20%;
+
+}
+
+#actu button {
+font-size: 60%;
+border-radius: 6px;
+background-color: rgb(13, 129, 153);
+border: none;
+width: 33%;
+padding: 2%;
+color: white;
+margin-left: 33%;
+height: 20px;
+}
+
+#photodiv {
+visibility: hidden;
+}
+
+#divcompteur {
+height: 300px;
+width: 90%;
+background-color: rgb(13, 129, 153);
+border-radius: 12px;
+margin-left: 4%;
+display: flex;
+justify-content: space-around;
+margin-top: -45%;
+}
+
+#instalogo,
+#fblogo {
+font-size: 50%;
+}
+
+#cgu {
+display: flex;
+flex-direction: column;
+margin-left: 45%;
+margin-top: -10%;
+}
+
+#footericon a i {
+font-size: 100%;
+}
+
+#premierArticleActualités {
+margin-top: 15%;
+
+
+}
+
+#facebookApiFeedDiv {
+background-color: rgb(251, 188, 88);
+width: 400px;
+height: 300px;
+border-radius: 5%;
+color: white;
+display: flex;
+flex-direction: column;
+justify-content: left;
+padding: 2% 2% 0% 2%;
+margin-left: -5%;
+}
+
+.enSavoirPlusActu {
+visibility: hidden;
+}
+
+.inscriptionContainer {
+display: flex;
+margin-left: 15%;
+margin-top: 2%;
+height:800px;
+width: 80%;
+display: flex;
+flex-direction: column;
+}
+.signInput{
+width: 100%;
+}
+#backgroundInscription {
+width: 80%;
+background-color: rgb(13, 129, 153);
+border-radius: 30px;
+margin-left: 10%;
+height: 500px;
+display: flex;
+flex-direction: column;
+margin-top: 20%;
+}
+
+#loginLogoSvgInscription {
+visibility: hidden;
+
+}
+
+#leCollectifArticle {
+margin-top: 30%;
+color: rgb(119, 119, 119);
+width: 45%;
+}
+
+#SecondArticleImg {
+width: 250px;
+height: 250px;
+border-radius: 2%;
+margin-top: 80%;
+}
+
+#jeMinscrisLeCollectifButton {
+display: none;
+}
+
+.TableauImgsFormat {
+height: 100px;
+width: 150px;
+margin: 2% 2% 0% 2%;
+}
+
+#chartePourEux {
+display: none;
+}
+
+#articlesChartePEux {
+width: 255%;
+margin: 0% 0% 0% 0%;
+font-style: normal;
+font-weight: normal;
+background-color: white;
+border-radius: 5%;
+height: 75%;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: left;
+padding: 2%;
+color: rgb(119, 119, 119);
+margin-left: -22%;
+border-radius: 5px;
+}
+
+#fondCouleurArticle {
+background-color: rgb(251, 188, 88);
+display: flex;
+align-items: center;
+justify-content: center;
+height: 350px;
+width: 90%;
+margin-left: 5%;
+border-radius: 5px;
+padding-left: 2%;
+padding-right: 2%;
+}
+
+#deuxiemeImgActu {
+display: none;
+}
+
+#articleDeuxActuDiv {
+margin-left: -20%;
+}
+
+#mainLivraison {
+background-color: rgb(13, 129, 153);
+margin-left: 20%;
+width: 60%;
+border-radius: 10px;
+height: 500px;
+margin-top: 20%;
+
+
+}
+
+#listePaniersDiv {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-bottom: 5%;
+padding: 1%;
+
+}
+
+#mainContact {
+display: flex;
+flex-direction: column;
+height: 350px;
+margin-top: 20%;
+
+}
+
+#formContact {
+width: 200%;
+margin-left: -5%;
+}
+#section-stats2 #text1{
+font-size: 100%;
+}
+#section-stats2 #text2{
+font-size: 100%;
+}
+#seDeco{
+color: black;
+}
+#seDeco1 {
+color: black;
+}
+#Connecté{
+margin-bottom: -3%;
+}
+#logo{
+top: 15%;
+left: 3%;
+}
+#logo2{
+top: 15%;
+left: 3%;
+}
+#deposerPanierDiv{
+width: 100%;
+margin-left: 0%;
+}
+#vosPanierRepasDiv{
+width: 100%;
+margin-left: 0%;
+}
+.updateinput{
+width: 50%;
+height: 70%;
+}
+#buttonSupprimerRepas a{
+font-size: 80%;
+
+}
+#buttonSupprimerRepas{
+width: 15%;
+height: 23.5px;
+display: flex;
+}
+#messageModify{
+width: 40%;
+height: 23.5px;
+display: flex;
+}
+#buttonModifierPanier{
+width: 25%;
+height: 23.5px;
+display: flex;
+}
+#buttonModifierPanier a{
+font-size: 80%;
+}
+#mainLivraison{
+width: 100%;
+margin-left: 0%;
+}
+#premierArticleActualités{
+    width: 100%;
+    margin: 0 0 0 0;
+}
+#facebookApiFeedDiv{
+    width: 50%;
+}
 }
